<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/txt_settings_loccategory" >
         <ListPreference
            android:entries="@array/method_entries"
            android:entryValues="@array/method_values"
            android:defaultValue="auto"
            android:key="mLoc"
            android:summary="@string/txt_settings_methodsummary"
            android:title="@string/txt_settings_method" />
         <ListPreference
            android:entries="@array/wait_gps_entries"
            android:entryValues="@array/wait_gps_values"
            android:defaultValue="60"
            android:key="tGps"
            android:summary="@string/txt_settings_tgps_summary"
            android:title="@string/txt_settings_tgps" />
     </PreferenceCategory>
</PreferenceScreen>